--- a/SecondDay/index.html
+++ b/SecondDay/index.html
@@ -5,18 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale-1.0" />
         <meta name="description" content="This is the home page of the portfolio." />
         <meta name="keywords" content="HTML , html , CSS , Javascript , JS , portfolio , yashith"/>
-        <title>
-            Home Page
-        </title>
+        <title>Home Page</title>
         <link rel="icon" href="/images/prof img.jpg"/>
+        <link rel="stylesheet" href="/css/index-styles.css">
     </head>
     <body>
-        <h1>Internet Technologies</h1>
+        <video class="video-bg" autoplay muted loop>
+            <source src="/assets/videos/backgroundvideo.mp4" type="video/mp4">
+        </video>
 
-        <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;"/>
+        <div class="container">
+            <div class="ijse-logo">IJSE</div>
+            <div class="institute-name">Institute of Software Engineering</div>
+        </div>
+
+        <h1 style="text-align: center;">Internet Technologies</h1>
+
+        <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;" class="profile_image"/>
 
         <br/> 
-
+ 
         <h3>Nethmi Nanayakkara</h3>
 
         <br/>
