--- a/SecondDay/pages/lesson-css-floating.html
+++ b/SecondDay/pages/lesson-css-floating.html
@@ -8,7 +8,9 @@
         img {
             width: 300px;
             height: 400px;
-            object-fit: contain;
+            object-fit: cover;
+            float: right;
+            margin-right: 12px;
         }
     </style>
 </head>
