css lessons added

--- a/SecondDay/index.html
+++ b/SecondDay/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale-1.0" />
         <meta name="description" content="This is the home page of the portfolio." />
         <meta name="keywords" content="HTML , html , CSS , Javascript , JS , portfolio , yashith"/>
-        <title>Home Page</title>
-        <link rel="icon" href="/images/prof img.jpg"/>
+        <title>Lessons</title>
+        <link rel="icon" href="/assets/images/icon.jpg"/>
         <link rel="stylesheet" href="/css/index-styles.css">
     </head>
     <body>
@@ -19,30 +19,67 @@
             <div class="institute-name">Institute of Software Engineering</div>
         </div>
 
-        <h1 style="text-align: center;">Internet Technologies</h1>
-
         <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;" class="profile_image"/>
 
-        <br/> 
+        <br/>
  
-        <h3>Nethmi Nanayakkara</h3>
+        <h3 id="name">Nethmi Nanayakkara</h3>
+        <h3>241722047</h3>
 
-        <br/>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        <h1 id="it">Internet Technologies</h1>
 
-        <h2><u>Module Contents</u></h2>
-        <h3>Lessons</h3>
+        <h2 id="mc">Module Contents</h2>
+        <p class="lesson">Lessons</p>
+
+        <div class="lesson-list">
+        <ol>
+            <li><a href="/pages/lesson-hyperlink.html" target="_blank">HTML Hyperlink</a></li>
+            <li><a href="/pages/lesson-list.html" target="_blank">HTML List</a></li>
+            <li><a href="/pages/lesson-media-content.html" target="_blank">HTML Media Content</a></li>
+            <li><a href="/pages/lesson-text.html" target="_blank">HTML Text</a></li>
+            <li><a href="/pages/lesson-form-elements.html" target="_blank">HTML Form Elements</a></li>
+            <li><a href="/pages/lesson-tables.html" target="_blank">HTML Tables</a></li>
+            <li><a href="/pages/lesson-structral.html" target="_blank">HTML Structural</a></li>
+            <li><a href="/pages/lesson-icons.html" target="_blank">HTML Icons</a></li>
+        </ol>
 
         <ol>
-            <li><a href="/pages/lesson-hyperlink.html" target="_blank">Click here to hyperlink</a></li>
-            <li><a href="/pages/lesson-list.html" target="_blank">Click here to list</a></li>
-            <li><a href="/pages/lesson-media-content.html" target="_blank">Click here to media content</a></li>
-            <li><a href="/pages/lesson-text.html" target="_blank">Click here to text</a></li>
+            <li><a href="/pages/lesson-integration-priority.html" target="_blank">CSS Integration Priority</a></li>
+            <li><a href="/pages/lesson-css-selector.html" target="_blank">CSS Selector</a></li>
+            <li><a href="/pages/lesson-css-shapes.html" target="_blank">CSS Shapes</a></li>
+            <li><a href="/pages/lesson-css-specificity.html" target="_blank">CSS Specificity</a></li>
+            <li><a href="/pages/lesson-css-important.html" target="_blank">CSS Important</a></li>
+            <li><a href="/pages/lesson-css-boxmodel.html" target="_blank">CSS Box Model</a></li>
+            <li><a href="/pages/lesson-css-floating.html" target="_blank">CSS Floating</a></li>
+            <li><a href="/pages/lesson-css-flexbox.html" target="_blank">CSS Flexbox</a></li>
         </ol>
-        <br/>
-        <h3>Examples</h3>
+
         <ol>
-            <li><a href="/Exercises/exercise1.html" target="_blank">Click here to exercise 1</a></li>
-            <li><a href="/Exercises/exercise2.html" target="_blank">Click here to execise 2</a></li>
+            <li><a href="/pages/lesson-css-integration.html" target="_blank">CSS Integration</a></li>
+            <li><a href="/pages/lesson - css - text.html" target="_blank">CSS Text</a></li>
+            <li><a href="/pages/lesson-css-background.html" target="_blank">CSS Background</a></li>
+            <li><a href="/pages/lesson-css-border.html" target="_blank">CSS Border</a></li>
+            <li><a href="/pages/lesson-css-margin.html" target="_blank">CSS Margin</a></li>
+            <li><a href="/pages/lesson-css-padding.html" target="_blank">CSS Padding</a></li>
+            <li><a href="/pages/lesson-css-source-order.html" target="_blank">CSS Source Order</a></li>
+            <li><a href="/pages/lesson-css-units.html" target="_blank">CSS Units</a></li>
         </ol>
+        </div>
+
+        <br/>
+        <p class="exercise">Exercises</p>
+        <div class="exercise-list">
+        <ol>
+            <li><a href="/Exercises/exercise1.html" target="_blank">Exercise 1</a></li>
+            <li><a href="/Exercises/exercise2.html" target="_blank">Exercise 2</a></li>
+            <li><a href="/Exercises/exercise3.html" target="_blank">Exercise 3</a></li>
+        </ol>
+        <ol>
+            <li><a href="/Exercises/exercise4.html" target="_blank">Exercise 4</a></li>
+            <li><a href="/Exercises/exercise5.html" target="_blank">Exercise 5</a></li>
+            <li><a href="/Exercises/Exercise6.html" target="_blank">Exercise 6</a></li>
+        </ol>
+    </div>
     </body>
 </html>
