--- a/SecondDay/index.html
+++ b/SecondDay/index.html
@@ -19,7 +19,7 @@
             <div class="institute-name">Institute of Software Engineering</div>
         </div>
 
-        <img src="/assets/images/prof img.jpg" alt="Nethmi" class="profile_image"/>
+        <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;" class="profile_image"/>
 
         <br/>
  
