--- a/SecondDay/Exercises/exercise3.html
+++ b/SecondDay/Exercises/exercise3.html
@@ -5,34 +5,52 @@
         <meta name="viewport" content="width=device-width, initial-scale-1.0" />
         <meta name="description" content="This is the home page of the portfolio." />
         <meta name="keywords" content="HTML , html , CSS , Javascript , JS , portfolio , yashith"/>
-        <title>Exercise</title>
+        <title> Exercise 4</title>
+            <style>
+                table, th, td{
+                    border : 1px solid black;
+                    border-collapse: collapse;                }
+            </style>
     </head>
     <body>
-        <h1>Internet Technologies</h1>
-
-        <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;"/>
-
-        <br/> 
-
-        <h3>Nethmi Nanayakkara</h3>
-
+        <table>
+            <thead>
+                <tr>
+                    <th>Item Name</th>
+                    <th>Qty</th>
+                    <th>Unit Price</th>
+                    <th>Amount</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Item 1</td>
+                    <td>1</td>
+                    <td>100.00</td>
+                    <td>100.00</td>
+                </tr>
+                <tr>
+                    <td>Item 2</td>
+                    <td>2</td>
+                    <td>200.00</td>
+                    <td>400.00</td>
+                </tr>
+                <tr>
+                    <td>Item 3</td>
+                    <td>2</td>
+                    <td>250.00</td>
+                    <td>500.00</td>
+                </tr>
+                <tr>
+                    <td>Total</td>
+                    <td></td>
+                    <td></td>
+                    <td>1000.00</td>
+                </tr>
+            </tbody>
+        </table>
         <br/>
-
-        <h2><u>Module Contents</u></h2>
-        <h3>Lessons</h3>
-
-        <ol>
-            <li><a href="/pages/lesson-hyperlink.html" target="_blank">Click here to hyperlink</a></li>
-            <li><a href="/pages/lesson-list.html" target="_blank">Click here to list</a></li>
-            <li><a href="/pages/lesson-media-content.html" target="_blank">Click here to media content</a></li>
-            <li><a href="/pages/lesson-text.html" target="_blank">Click here to text</a></li>
-        </ol>
         <br/>
-        <h3>Examples</h3>
-        <ol>
-            <li><a href="/Exercises/exercise1.html" target="_blank">Click here to exercise 1</a></li>
-            <li><a href="/Exercises/exercise2.html" target="_blank">Click here to execise 2</a></li>
-        </ol>
 
     </body>
 </html>
