--- a/SecondDay/index.html
+++ b/SecondDay/index.html
@@ -65,6 +65,56 @@
             <li><a href="/pages/lesson-css-source-order.html" target="_blank">CSS Source Order</a></li>
             <li><a href="/pages/lesson-css-units.html" target="_blank">CSS Units</a></li>
         </ol>
+
+        <ol>
+            <li><a href="/pages/lesson-css-animation.html" target="_blank">CSS Animation</a></li>
+            <li><a href="/pages/lesson-css-grid.html" target="_blank">CSS Grid</a></li>
+            <li><a href="/pages/lesson-css-gridlayout.html" target="_blank">CSS Grid Layout</a></li>
+            <li><a href="/pages/lesson-css-media-queries.html" target="_blank">CSS Media Queries</a></li>
+            <li><a href="/pages/lesson-css-position.html" target="_blank">CSS Position</a></li>
+            <li><a href="/pages/lesson-css-transitions.html" target="_blank">CSS Transitions</a></li>
+            <li><a href="/pages/lesson-event-listeners.html" target="_blank">Event Listeners</a></li>
+            <li><a href="/pages/lesson-js-integration.html" target="_blank">JS Integration</a></li>
+            
+        </ol>
+
+        <ol>
+            <li><a href="/pages/lesson-DOM-selectors.html" target="_blank">DOM Selectors</a></li>
+            <li><a href="/pages/lesson-DOM-manipulation.html" target="_blank">DOM Manipulation</a></li>
+            <li><a href="/pages/lesson-bootstrap-integration.html" target="_blank">Bootstrap Integration</a></li>
+        </ol>
+        </div>
+        <br/>
+
+        <p class="js">Java Script Lessons</p>
+        <div class="js-list">
+            <ol>
+                <li><a href="/js/Arrays.js" target="_blank">Arrays</a></li>
+                <li><a href="/js/attributesModifications.js" target="_blank">Attributes Modification</a></li>
+                <li><a href="/js/ClassManipulation.js" target="_blank">Class Manipulation</a></li>
+                <li><a href="/js/ContentModifications.js" target="_blank">Content Modification</a></li>
+                <li><a href="/js/ControlFlows.js" target="_blank">Controll Flows</a></li>
+            </ol>
+            <ol>
+                <li><a href="/js/DataTypes.js" target="_blank">Data Types</a></li>
+                <li><a href="/js/DOMSelector.js" target="_blank">DOM Selector</a></li>
+                <li><a href="/js/DynamicTyping.js" target="_blank">Dynamic Typing</a></li>
+                <li><a href="/js/ElementsHandlingt.js" target="_blank">Element Handling</a></li>
+                <li><a href="/js/EventHandling.js" target="_blank">Event Handling</a></li>
+            </ol>
+            <ol>
+                <li><a href="/js/EventListeners.js" target="_blank">Event Listeners</a></li>
+                <li><a href="/js/FunctionHoisting.js" target="_blank">Function Hoisting</a></li>
+                <li><a href="/js/Functions.js" target="_blank">Functions</a></li>
+                <li><a href="/js/JSIntegration.js" target="_blank">JS Integration</a></li>
+                <li><a href="/js/Objects.js" target="_blank">Objects</a></li>
+            </ol>
+            <ol>
+                <li><a href="/js/Operators.js" target="_blank">Operators</a></li>
+                <li><a href="/js/styleModifications.js" target="_blank">Style Modification</a></li>
+                <li><a href="/js/VariableHoisting.js" target="_blank">Variable Hoisting</a></li>
+                <li><a href="/js/variables.js" target="_blank">Variables</a></li>
+            </ol>
         </div>
 
         <br/>
@@ -74,11 +124,21 @@
             <li><a href="/Exercises/exercise1.html" target="_blank">Exercise 1</a></li>
             <li><a href="/Exercises/exercise2.html" target="_blank">Exercise 2</a></li>
             <li><a href="/Exercises/exercise3.html" target="_blank">Exercise 3</a></li>
-        </ol>
-        <ol>
             <li><a href="/Exercises/exercise4.html" target="_blank">Exercise 4</a></li>
             <li><a href="/Exercises/exercise5.html" target="_blank">Exercise 5</a></li>
-            <li><a href="/Exercises/Exercise6.html" target="_blank">Exercise 6</a></li>
+        </ol>
+        <ol>
+            <li><a href="/Exercises/exercise6.html" target="_blank">Exercise 6</a></li>
+            <li><a href="/Exercises/exercise7.html" target="_blank">Exercise 7</a></li>
+            <li><a href="/Exercises/exercise8.html" target="_blank">Exercise 8</a></li>
+            <li><a href="/Exercises/exercise9.html" target="_blank">Exercise 9</a></li>
+            <li><a href="/Exercises/exercise10.html" target="_blank">Exercise 10</a></li>
+        </ol>
+        <ol>
+            <li><a href="/Exercises/exercise11.html" target="_blank">Exercise 11</a></li>
+            <li><a href="/Exercises/exercise12.html" target="_blank">Exercise 12</a></li>
+            <li><a href="/Exercises/exercise13.html" target="_blank">Exercise 13</a></li>
+            <li><a href="/Exercises/exercise14.html" target="_blank">Exercise 14</a></li>        
         </ol>
     </div>
     </body>
