--- a/SecondDay/Exercises/exercise4.html
+++ b/SecondDay/Exercises/exercise4.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale-1.0" />
-        <meta name="description" content="This is the home page of the portfolio." />
-        <meta name="keywords" content="HTML , html , CSS , Javascript , JS , portfolio , yashith"/>
-        <title> Exercise 4</title>
-            <style>
-                table, th, td{
-                    border : 1px solid black;
-                    border-collapse: collapse;                }
-            </style>
-    </head>
-    <body>
-        <table>
-            <thead>
-                <tr>
-                    <th>Item Name</th>
-                    <th>Qty</th>
-                    <th>Unit Price</th>
-                    <th>Amount</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Item 1</td>
-                    <td>1</td>
-                    <td>100.00</td>
-                    <td>100.00</td>
-                </tr>
-                <tr>
-                    <td>Item 2</td>
-                    <td>2</td>
-                    <td>200.00</td>
-                    <td>400.00</td>
-                </tr>
-                <tr>
-                    <td>Item 3</td>
-                    <td>2</td>
-                    <td>250.00</td>
-                    <td>500.00</td>
-                </tr>
-                <tr>
-                    <td>Total</td>
-                    <td></td>
-                    <td></td>
-                    <td>1000.00</td>
-                </tr>
-            </tbody>
-        </table>
-        <br/>
-        <br/>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+    table, td{
+        border : 1px solid black;
+            border-collapse: collapse; 
+    }
+    </style>
+</head>
+<body>
+    <table style="width: 600px; text-align: left">
+        <tr style="height: 50px;">
+            <td colspan="4"><b>Personal Information</b></td>
+        </tr>
+        <tr style="height: 50px;">
+            <td><b>Name : </b></td>
+            <td colspan="3">
+                <label for = "Enter name here"></label>
+                <input type = "text" placeholder = "Enter name here" /></td>
+          
+        </tr>
+        <tr style="height: 50px;">
+            <td ><b>Age : </b></td>
+            <td colspan="3"><label for = "age"> </label>
+                <input type="number" value="18"/></td>
+           
 
-    </body>
+        </tr>
+        <tr style="height: 50px;">
+            <td rowspan="3"><b>Address : </b></td>
+            <td><b>Street : </b></td>
+            <td colspan="2"><label for = "Street"></label>
+                <input type = "text" placeholder = "Street"  /></td>
+
+        </tr>
+        <tr style="height: 50px;">
+            <td><b>City : </b></td>
+            <td colspan="2"><label for = "City"></label>
+                <input type = "text" placeholder = "City"  /></td>
+
+        </tr>
+        <tr style="height: 50px;">
+            <td><b>Zip Code : </b></td>
+            <td colspan="2"><label for = "Zip Code"></label>
+                <input type = "text" placeholder = "Zip Code"  /></td>
+        </tr>
+        <tr style="height: 50px;">
+            <td colspan="4"><b>Additional Information</b></td>
+
+        </tr>
+        <tr style="height: 100px;">
+            <td colspan="4">       <textarea name="message" id="message" placeholder="" rows="4" cols="80"></textarea>
+            </td>
+        </tr>
+        <tr style="height: 50px;">
+            <td colspan="4">       <button onclick=""><b> Submit</b></button>
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
