--- a/SecondDay/Exercises/exercise5.html
+++ b/SecondDay/Exercises/exercise5.html
@@ -3,63 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-    table, td{
-        border : 1px solid black;
-            border-collapse: collapse; 
-    }
-    </style>
+    <title>Exercise 6</title>
 </head>
 <body>
-    <table style="width: 600px; text-align: left">
-        <tr style="height: 50px;">
-            <td colspan="4"><b>Personal Information</b></td>
-        </tr>
-        <tr style="height: 50px;">
-            <td><b>Name : </b></td>
-            <td colspan="3">
-                <label for = "Enter name here"></label>
-                <input type = "text" placeholder = "Enter name here" /></td>
-          
-        </tr>
-        <tr style="height: 50px;">
-            <td ><b>Age : </b></td>
-            <td colspan="3"><label for = "age"> </label>
-                <input type="number" value="18"/></td>
-           
-
-        </tr>
-        <tr style="height: 50px;">
-            <td rowspan="3"><b>Address : </b></td>
-            <td><b>Street : </b></td>
-            <td colspan="2"><label for = "Street"></label>
-                <input type = "text" placeholder = "Street"  /></td>
-
-        </tr>
-        <tr style="height: 50px;">
-            <td><b>City : </b></td>
-            <td colspan="2"><label for = "City"></label>
-                <input type = "text" placeholder = "City"  /></td>
-
-        </tr>
-        <tr style="height: 50px;">
-            <td><b>Zip Code : </b></td>
-            <td colspan="2"><label for = "Zip Code"></label>
-                <input type = "text" placeholder = "Zip Code"  /></td>
-        </tr>
-        <tr style="height: 50px;">
-            <td colspan="4"><b>Additional Information</b></td>
-
-        </tr>
-        <tr style="height: 100px;">
-            <td colspan="4">       <textarea name="message" id="message" placeholder="" rows="4" cols="80"></textarea>
-            </td>
-        </tr>
-        <tr style="height: 50px;">
-            <td colspan="4">       <button onclick=""><b> Submit</b></button>
-            </td>
-        </tr>
-    </table>
+    <p style="color:brown;"> <span style="font-style: italic;">Lorem ipsum</span> dolor sit amet consectetur adipisicing elit. Quaerat et aperiam corrupti perferendis quis,
+         adipisci <span style="font-weight: bold;"> voluptate possimus</span> minima repellat aspernatur veritatis maxime architecto, illo explicabo! 
+         Asperiores, <span style="text-decoration: underline;">error autem rem </span> expedita nesciunt cupiditate dolorum nobis, sapiente vitae, consequatur dolore. 
+         Deleniti <span style="background-color: blueviolet;"> mollitia doloribus error</span>  aliquam saepe dolore soluta vero earum accusamus delectus.</p>
 </body>
 </html>
