--- a/SecondDay/pages/lesson-media-content.html
+++ b/SecondDay/pages/lesson-media-content.html
@@ -14,7 +14,7 @@
 
         <strong>1.Images</strong>
         <br/>
-        <img src="/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;"/>
+        <img src="/assets/images/prof img.jpg" alt="Nethmi" style="width: 300px; height: 300px; object-fit: cover;"/>
 
         <br/> 
         <img src="https://images.samsung.com/is/image/samsung/assets/pk/smartphones/galaxy-s24-ultra/buy/S24Ultra-Color-Titanium_Black_MO.jpg?imbypass=true" alt="s24" style="width: 300px; height: 300px; object-fit: cover;"/>
@@ -41,8 +41,9 @@
         <br/>
         <iframe src="https://www.youtube.com/embed/A5pTGe2Z9mI?si=BySi8z0AF9W3MmFT" frameborder="0" width="500px" height="300px" ></iframe>
 
+        <iframe src="https://assets.pinterest.com/ext/embed.html?id=844776842637130180" height="359" width="345" frameborder="0" scrolling="no" ></iframe>
 
-
+        <video src="/assets/videos/Nice Loading Animation For Websites » CSS Author.gif"  controls style="height: 500px; height: 500px;"></video>
 
     </body>
 </html>
